# rl-kernel

./: .pre-commit-config.yaml  README.md  mkdocs.yaml  pyproject.toml  setup.py
.github/workflows/: auto-reviewer.yml  build-ci-image.yml  ci.yml  gpu-ci.yml
benchmarks/: benchmark_grpo_loss.py  benchmark_grpo_op.py  benchmark_linear_logp.py  benchmark_ratio_kl.py  benchmark_rl_kernels.py  benchmark_sampling.py  profiler.py
ci/: run_gpu_ci.sh
csrc/cuda/: fused_linear_logp_sm90.cu
docker/: Dockerfile.cuda
docs/: .nav.yml  README.md
docs/benchmarking/: README.md
docs/getting_started/: faq.md  installation.md
docs/operators/: README.md  grpo-loss.md  ratio-kl.md
rl_engine/executors/: bridge.py  rollout.py  training_contract.py
rl_engine/kernels/: registry.py  sampling.py
rl_engine/kernels/ops/: base.py
rl_engine/kernels/ops/cuda/attention/: flash_attn.py
rl_engine/kernels/ops/cuda/loss/: linear_logp.py  logp.py
rl_engine/kernels/ops/pytorch/attention/: __init__.py
rl_engine/kernels/ops/pytorch/loss/: grpo_loss.py  ratio_kl.py
rl_engine/kernels/ops/rocm/attention/: __init__.py  flash_attn.py
rl_engine/testing/: __init__.py  kv_consistency.py
rl_engine/tests/: test_dispatch.py
scripts/: check_rocm_env.py  run_perf.py  run_profile_suite.py
tests/: test_attention_correctness.py  test_cpu_hal.py  test_grpo_loss.py  test_kernel_registry.py  test_kv_cache_consistency.py  test_kv_cache_consistency_cuda.py  test_linear_logp.py  test_op_accuracy.py  test_profiler.py  test_ratio_kl.py  test_ray_actor_manager.py
(+3 files in other folders)
