[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "RL-Kernel"
version = "0.1.0"
description = "High-performance RL training engine focused on kernel fusion and memory efficiency."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [
    {name = "RL-Kernel Contributors"}
]
dependencies = [
    "torch>=2.4.1",
    "tabulate",
    "numpy",
    "accelerate",
    "transformers",
]

[project.optional-dependencies]
cuda = ["flashinfer>=0.1.6", "nvidia-ml-py"]
rocm = ["aiter"]
vllm = ["vllm>=0.6.0"]
dev = ["pytest", "black", "isort", "ruff", "mypy", "pre-commit"]

[tool.setuptools.packages.find]
where = ["."]
include = ["rl_engine*"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "B"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
ignore_missing_imports = true
follow_imports = "silent"
